<resources>
    <string name="app_name">CalculatorClient</string>
    <string name="number_hint">Enter a number</string>
    <string name="calculate_btn">Calculate</string>
    <string name="x_btn">X</string>

    <string-array name="operations">
        <item>Add</item>
        <item>Subtract</item>
        <item>Multiply</item>
        <item>Divide</item>
    </string-array>

    <string name="history">History</string>
    <string name="historyNote">Click to recover</string>
    <string name="equals">=</string>
    <string name="errorMsg">Error!</string>
</resources>